[tool.poetry]
name = "ReinforcementLearningProject"
version = "0.1.0"
description = "A first Reinforcement Learning Project including a DQN agent."
authors = ["Lucas Braz <lucas.braz@cpe.fr>"]
readme = "README.md"
packages = [{ include = "ReinforcementLearningProject", from = "."}]
license = "Proprietary"
repository = "https://github.com/LucasBrazCappelo/ReinforcementLearningProject"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
tqdm = "^4.65.0"
torch = "^1.10.0"
pandas = "^1.5.3"
joblib = "^1.2.0"
plotly = "^5.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
